--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -18,7 +18,7 @@ nav {
   }
   
   a {
-    color: #fff;
+    color: black;
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
