changed some frontend as well as backend

--- a/frontend/src/components/AddProduct.css
+++ b/frontend/src/components/AddProduct.css
@@ -50,7 +50,7 @@
 }
 
 .add-product-container input[type="number"] {
-    -moz-appearance: textfield; /* Hide number input spin buttons for Firefox */
+    -moz-appearance: textfield; 
 }
 
 .add-product-container input[type="number"]::-webkit-outer-spin-button,
